mdapipkg/objects/Contact_External_Connection__c.object
<CustomObject>
    <description>A junction object between External Connections and Contacts</description>
    <fields>
        <fullName>Active_ContactExternalConnection__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact External Connections</relationshipLabel>
        <relationshipName>Contact_External_Connections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Connection__c</fullName>
        <label>External Connection</label>
        <referenceTo>External_Connection__c</referenceTo>
        <relationshipLabel>Contact External Connections</relationshipLabel>
        <relationshipName>Contact_External_Connections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Industry_Category_1__c</fullName>
        <label>Industry Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Category_2__c</fullName>
        <label>Industry Category 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Category_3__c</fullName>
        <label>Industry Category 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Subcategory_1__c</fullName>
        <label>Industry Subcategory 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Category_1__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Subcategory_2__c</fullName>
        <label>Industry Subcategory 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Category_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Subcategory_3__c</fullName>
        <label>Industry Subcategory 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Category_3__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_External_Connection_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <inlineHelpText>Please enter website address here</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Contact External Connection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Active_ContactExternalConnection__c</columns>
        <columns>External_Connection__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CEC-{0}</displayFormat>
        <label>Contact External Connection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact External Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>